fixed the overflow issues

--- a/working-assets/css/content-mosaic.css
+++ b/working-assets/css/content-mosaic.css
@@ -7,6 +7,8 @@
   gap: 1.5rem;
   margin: 0.75rem auto;
   align-items: stretch;
+  justify-content: stretch;
+  align-content: stretch;
 
   & .spacer {
     grid-column: 1 / -1;
@@ -186,6 +188,11 @@
   .content-mosaic--item {
     aspect-ratio: var(--actual-c-span) / var(--r-span);
 
+    &:has(.content-mosaic--content) {
+      aspect-ratio: auto;
+      height: auto;
+    }
+
     & .content-mosaic--content {
       height: 100%;
     }
@@ -241,12 +248,6 @@
   }
   &.cta-position--right {
     justify-content: flex-end;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  .content-mosaic--item:has(.content-mosaic--content) {
-    grid-column: span 2 !important;
   }
 }
 
